<resources>
    <string name="facebook_app_id">331477127249746</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="lbl_drawer_open">Drawer Opened</string>
    <string name="lbl_drawer_close">Drawer Close</string>
    <string name="please_wait">Please Wait</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="no_network_msg">Please check your internet connection &amp; try again</string>
    <string name="dismiss">Dismiss</string>
    <string name="server_error">Something went wrong, please try again.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="want_to_logout">Do you really want to logout?</string>
    <string name="retry">Retry</string>
    <string name="app_id_gcm">59794067237</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="filter">Filter</string>
    <string name="msg_no_cat">No category available</string>
    <string name="logout">LOGOUT</string>
    <string name="ok">ok</string>
    <string name="register_new_acc">Register new account</string>
    <string name="edit">Edit</string>
    <string name="enter_bid_amount">Enter your bid amount</string>
    <string name="make_offer">Make Offer</string>
    <string name="bid_max_amount">We suggest that you bid the maximum amount that you\'re willing to pay for an item,as necessary.</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="proceed">Proceed</string>
    <string name="phone_no">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_otp">OtpActivity</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="change">Change</string>
    <string name="continue_as_guest">Continue As A Guest</string>
    <string name="join_soqek">JOIN SOQEK</string>
    <string name="phone_no_req">Please enter the phone number.</string>
    <string name="password_req">Please enter your password.</string>
    <string name="pwd_length">Password length shoulg be equal to or greater than 6.</string>
    <string name="confirm_pwd_req">Please enter confirm password.</string>
    <string name="cnfm_pwd_length">Confirm Password field should be equal to or greater than 6.</string>
    <string name="pwd_cnfpwd_not_same">Password and Confirm Password don\'t match.</string>
    <string name="ph_conf">"Is this your correct number?\n*\nAn SMS with one time password will be sent to this number"</string>
    <string name="phone_number_verification">Phone Number Verification</string>
    <string name="okay">Okay</string>
    <string name="enter_your_email_msg">Please enter your email address below to receive an email with your account and instructions for resetting your Password.</string>
    <string name="or">OR</string>
    <string name="hello_welcome"><![CDATA[Hello & Welcome!]]></string>
    <string name="buy_sell_msg">The simpler way to buy and sell locally..</string>
    <string name="enter_email">Please enter your email address.</string>
    <string name="invalid_email">Please enter a valid email address.</string>
    <string name="verify_otp_msg">SOQEK will send a One Time Password(OTP) to verify your phone number.</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="terms_conditions">By Verifying,you agree to the following terms and conditions.</string>
    <string name="title_activity_complete_profile">CompleteProfileActivity</string>
    <string name="your_name">YOUR NAME</string>
    <string name="done">Done</string>
    <string name="enter_your_name">Enter your name..</string>
    <string name="single_image">Single Image</string>
    <string name="select_picture_source">Choose image from camera or gallery.</string>
    <string name="gallery">Gallery</string>
    <string name="notifications">Notifications</string>
    <string name="get_update">Get an update instantly</string>
    <string name="help_center">Help Center</string>
    <string name="common_ques_ans">Common Questions and answers</string>
    <string name="change_pwd">Change Password</string>
    <string name="protect_your_acc">Protect your account</string>
    <string name="provision_specifying_msg">A Provision specifying some of the information that needs to be discloed.</string>
    <string name="action_filter">filter</string>
    <string name="action_search">search</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_post_offer">PostOfferActivity</string>
    <string name="search_everything">Search \nEverything</string>
    <string name="near">Near</string>
    <string name="electronics">Electronics</string>
    <string name="people_i_follow">People I \nFollow</string>
    <string name="people_follow_me">People Following \nMe</string>
    <string name="furniture">Furniture</string>
    <string name="grocery">Grocery</string>
    <string name="kids">Kids</string>
    <string name="vehicles">Vehicles</string>
    <string name="cloths">Cloths</string>
    <string name="personal_accessories">Personal \nAccessories</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="fitness">Fitness</string>
    <string name="what_kind_color">What kind of color are you interested in?</string>
    <string name="more_products">You will see more products from the category you choose.</string>
    <string name="post_an_offer">POST AN OFFER</string>
    <string name="action_next">NEXT</string>
    <string name="product_category">Product category</string>
    <string name="choose">Choose</string>
    <string name="describe_product">Describe Product</string>
    <string name="product_price">Product Price</string>
    <string name="condition">Condition</string>
    <string name="set_product_location">Set Product Location</string>
    <string name="title_activity_post_part2">PostPart2Activity</string>
    <string name="upload_photo_max">Upload Photo (Max.6)</string>
    <string name="price_range">PRICE RANGE(RS)</string>
    <string name="distance">DISTANCE(KM.)</string>
    <string name="sort_by">SORT BY</string>
    <string name="location">LOCATION</string>
    <string name="apply">APPLY</string>
    <string name="reset">Reset</string>
    <string name="closest">Closest</string>
    <string name="newest">Newest</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string-array name="drawer_items">
        <item>Home</item>
        <item>My Profile</item>
        <item>Post New Offer</item>
        <item>Categories</item>
        <item>Notifications</item>
        <item>My Offers</item>
        <item>Messages</item>
        <item>Invite Friends</item>
        <item>Settings</item>
    </string-array>
    <string-array name="conditions">
        <item>Poor</item>
        <item>Average</item>
        <item>Good</item>
        <item>Best</item>
    </string-array>
    <string name="gps_permission_rationale">Please allow the app to use your location so that we can show you the most accurate prices.</string>
    <string name="camera_permission_rationale">Please allow the app to use your camera so that we can upload a profile picture for you.</string>
    <string name="storage_permission_rationale">Please allow the app to view your gallery so that we can upload a profile picture for you.</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="invite_fb_friends">Invite Facebook Friends</string>
    <string name="send_email">Tap here to send invite via email</string>
    <string name="search_fb_contacts">Search Facebook Contacts</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="my_profile">My Profile</string>
    <string name="cash_service_free">Cash Service Free</string>
    <string name="pay_now">Pay Now</string>
    <string name="bank_acc_info">Bank Account Info</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_holders_name">Bank Holder\'s Name</string>
    <string name="acc_no">Account Number</string>
    <string name="iban">IBAN</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_bank_details">BankDetailsActivity</string>
    <string name="edit_bank_info">EDIT BANK ACCOUNT INFO</string>
    <string name="save">Save</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="email_add">Email Address</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="title_activity_offers">OffersActivity</string>
    <string name="favourites">Favourites</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="my_offers">MY OFFERS</string>
    <string name="on_sale_products">ON SALE PRODUCTS</string>
    <string name="sold_products">SOLD PRODUCTS</string>
    <string name="post_new_offer">Post New Offer</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="title_activity_home_categories">HomeCategories</string>
    <string name="ask">Ask</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="buy">Buy</string>
    <string name="follow">Follow</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="report">Report</string>
    <string name="title_activity_buy">BuyActivity</string>
    <string name="email">Email</string>
    <string name="send_request">Send Request</string>
    <string name="find_your_organisation">Please select your organisation</string>
    <string name="give">Give</string>
    <string name="_1_100_kms">1-100 Kms</string>
    <string name="where">Where?</string>
    <string name="description_star">Description*</string>
    <string name="how_long">How Long?</string>
    <string name="_1_10_hrs">1 - 10 Hrs</string>
    <string name="type">Type</string>
    <string name="volunteer">Volunteer</string>
    <string name="coaching_skills_training">Coaching / Skills Training</string>
    <string name="language_teaching">Language Teaching</string>
    <string name="legal_consulting">Legal / Consulting</string>
    <string name="conatcted_text">How do you prefer to be contacted?</string>
    <string name="phone">Phone</string>
    <string name="email_address">Email Address</string>
    <string name="your_email_username">Your email &amp; </string>
    <string name="username">Username</string>
    <string name="username_text">Select a username which will be used to identify you in Zakati community yet maintain your privacy.</string>
    <string name="skip_greater">Skip ></string>
    <string name="organisation_text">You have confirmed that you are employed by a charity or non-profit organisation</string>
    <string name="can_t_find_organisation">Can\'t find your organisation?</string>
    <string name="register_organisation"><u>Click here</u> to register your organisation.</string>
    <string name="give_money">Give Money</string>
    <string name="track">Track</string>
    <string name="give_stuff">Give Stuff</string>
    <string name="give_time">Give Time</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="groups">Groups</string>
    <string name="causes">Causes</string>
    <string name="profile">Profile</string>
    <string name="money">Money</string>
    <string name="employees">Employees</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="username_ques">username?</string>
</resources>