<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp_d"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_browse"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/browse" />

    <item
        android:id="@+id/nav_groups"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/groups" />

    <item
        android:id="@+id/nav_causes"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/causes" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/profile" />

</menu>
