<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
>
    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_email_username"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_ques"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_very_large"
            android:text="@string/email_address"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/EditTextStyle_bottom_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email_address"
            android:textColorHint="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:text="@string/username"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etUserName"
            style="@style/EditTextStyle_bottom_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/username"
            android:textColorHint="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15" />

        <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:alpha="0.6"
        android:text="@string/username_text"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|end">

            <include layout="@layout/white_fab" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
